--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@lottiefiles/dotlottie-react": "^0.12.1",
     "@rainbow-me/rainbowkit": "^2.1.7",
     "@rumess/react-flip-countdown": "^1.2.6",
     "@tanstack/react-query": "^5.59.8",
@@ -26,6 +27,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.3.0",
+    "react-lottie": "^1.2.10",
     "react-player": "^2.16.0",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
